# Theorem

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  LICENSE  MIGRATION_PLAN.md  PDFIUM_INTEGRATION_GUIDE.md  PLAN.md  PRD.md  README.md  TECHNICAL_SPEC.md  index.html  llms-full.txt  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  src_files_manifest.txt  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.opencode/plans/: pdf-metadata-extraction.md
apps/web/: package.json  tsconfig.json  vite.config.ts
design-system/lion-reader/: IMPLEMENTATION.md  MASTER.md
design-system/theorem/: MASTER.md
docs/: PLAN.md  android-build.md  monorepo-guide.md  syncPLAN.md
docs/ai/: module-index.md
docs/api/: README.md
public/: reader-theme.css  site.webmanifest
scripts/: add_feature_aliases.py  create_feature_indices.py  create_feature_packages.py  dev.mjs  finalize_config.py  finalize_monorepo.py  fix_foliate_paths.py  fix_vite_config_syntax.py  generate-ai-context.mjs  generate-module-docs.mjs  install-linux.sh  makepackage-linux.sh  migrate_to_monorepo.py  replace-branding-with-theorem.mjs  uninstall-linux.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile-qr-scanner.json
src-tauri/icons/: icon.icns
src-tauri/plugins/mobile-folder-scan/: Cargo.toml  build.rs
src-tauri/plugins/mobile-folder-scan/android/: build.gradle.kts
src-tauri/plugins/mobile-folder-scan/android/src/main/java/: FolderScanPlugin.kt
src-tauri/plugins/mobile-folder-scan/permissions/autogenerated/: reference.md
src-tauri/plugins/mobile-folder-scan/permissions/schemas/: schema.json
src-tauri/plugins/mobile-folder-scan/src/: lib.rs
src-tauri/src/: database.rs  image_encoder.rs  lib.rs  main.rs  pdf_commands.rs  sync_commands.rs  sync_crypto.rs  sync_protocol.rs  sync_server.rs
src/components/: AppTitlebar.tsx  ErrorBoundary.tsx  LionLogo.tsx  TheoremLogo.tsx
src/core/: index.ts
src/engines/: epub-engine.ts  epubjs-engine.ts  foliate-engine.ts  index.ts  pdfjs-engine.css  pdfjs-engine.tsx  pdfjs-text-layer.css
src/foliate/: reader.ts  styles.css  themes.ts
src/hooks/: index.ts  useDocumentReader.ts  usePDF.ts  usePDFEmbedded.ts
src/lib/: cover-extractor.ts  design-tokens.ts  dialogs.ts  import.ts  index.ts  pdf-api.ts  pdfjs-config.ts  reader-styles.ts  shelf-colors.ts  storage.ts  utils.ts
src/pages/: Annotations.tsx  Bookmarks.tsx  Library.tsx  Profile.tsx  Reader.tsx  Settings.tsx  Shelves.tsx  Statistics.tsx  Vocabulary.tsx  index.ts
src/services/: HighlightService.ts  StarDictService.ts
src/shell/: AppTitlebar.tsx  ErrorBoundary.tsx  TheoremLogo.tsx  index.ts
src/store/: index.ts
src/types/: index.ts
src/ui/: Backdrop.tsx  ContextMenu.tsx  Dropdown.tsx  Modal.tsx  Panel.tsx  (+1 more)
tests/: library-filtering.test.ts  pdfjs-runtime.test.ts  setup.ts  store-performance.test.ts  sync-merge.test.ts
(+143 files in other folders)
