[package]
name = "theorem"
version = "1.0.0-2"
description = "Local-first reader for PDFs, EPUBs, and RSS with markdown export."
authors = ["Fundamentals"]
license = "MIT"
homepage = "https://github.com/sapienskid/theorem"
repository = "https://github.com/sapienskid/theorem"
edition = "2021"
default-run = "theorem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "theorem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-app = "2.0.0-alpha.1"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-mobile-folder-scan = { path = "plugins/mobile-folder-scan" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# ── LAN Device Sync ──
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
axum = "0.7"
local-ip-address = "0.6"

# Cryptography (RustCrypto, NCC Group audited)
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# QR code generation + encoding utilities
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
base64 = "0.22"
hex = "0.4"
