[package]
name = "tauri-plugin-mobile-folder-scan"
version = "0.1.0"
description = "Android folder picker/scan plugin used by Theorem."
authors = ["Fundamentals"]
license = "UNLICENSED"
homepage = "https://github.com/sapienskid/hodor"
repository = "https://github.com/sapienskid/hodor"
edition = "2021"
links = "tauri-plugin-mobile-folder-scan"
build = "build.rs"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-plugin = { version = "2.4", features = ["build"] }
